# autonomous-mobile-robot-ros2

./: .gitignore
docs/: HANDOVER_7JUNI2026.md  HANDOVER_KORELASI_PCD.md  HANDOVER_NAV2_AUTONOMOUS_19JUNI.md  HANDOVER_NAV2_AUTONOMOUS_21JUNI.md  HANDOVER_PLAN_A_NAV2.md  SOP_NAV2_TESTING.md
maps/: lab_map_20260605.pgm  lab_map_20260605.yaml
pcd_prototype/: README.md  amr_pcd_prototype.py  amr_perception_node.py
scripts/: sync_nuc_from_github.sh
src/amr_3d_mapping/: CMakeLists.txt  package.xml
src/amr_3d_mapping/config/: rtabmap_localization.yaml  rtabmap_mapping.yaml  rtabmap_mapping.yaml.bak_20260526_123056  rtabmap_mapping.yaml.bak_20260526_133855  rtabmap_mapping.yaml.bak_20260602_123052
src/amr_3d_mapping/launch/: rtabmap_localization.launch.py  rtabmap_mapping.launch.py  rtabmap_mapping.launch.py.bak_20260526_123056  rtabmap_mapping.launch.py.bak_20260526_133855  rtabmap_mapping.launch.py.bak_20260601_160213
src/amr_bringup/: package.xml  setup.py
src/amr_bringup/config/: joy_params.yaml
src/amr_bringup/launch/: amr_full.launch.py  amr_launch.py  sensors_launch.py  sensors_launch.py.bak_20260602_123052  sensors_launch.py.bak_respawn_20260521_135910  sensors_launch.py.bak_respawn_20260521_140555
src/amr_controller/: CMakeLists.txt  package.xml
src/amr_controller/scripts/: imu_merger_node.py  odometry_publisher.py
src/amr_controller/src/: stm32_bridge.cpp
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/launch/: view_robot.launch.py
src/amr_description/urdf/: amr_description.urdf.xacro  amr_inertia.xacro  amr_macros.xacro
src/amr_failover/: package.xml  setup.cfg  setup.py
src/amr_failover/amr_failover/: failover_controller.py
src/amr_failover/launch/: failover.launch.py
src/amr_slam/: CMakeLists.txt  package.xml
src/amr_slam/config/: nav2_params.yaml  slam_localization.yaml  slam_mapping.yaml  slam_mapping.yaml.backup
src/amr_slam/launch/: nav2.launch.py  slam_localization.launch.py  slam_mapping.launch.py
src/amr_slam/scripts/: amr_auto_patrol.py  amr_loop_patrol.py  goal_sender.py  run_amr_demo.sh
src/amr_visual_regression/: package.xml  setup.cfg  setup.py
src/amr_visual_regression/amr_visual_regression/: data_collector_node.py  feature_extractor.py  lidar_line_segments_node.py  vr_inference_node.py
src/amr_visual_regression/launch/: collect_dataset.launch.py  line_segments.launch.py  vr_inference.launch.py
src/amr_visual_regression/scripts/: train.py
