<?xml version="1.0"?>
<package format="3">
  <name>amr_failover</name>
  <version>0.1.0</version>
  <description>
    Failover Controller node: arbiter antara SLAM/Nav2 dan Visual Regression.
    
    State machine:
      SLAM_ACTIVE      (default)  -> publish /cmd_vel = /cmd_vel_nav
      VISUAL_FALLBACK             -> publish /cmd_vel = /cmd_vel_visual
      JOY_OVERRIDE                -> publish /cmd_vel = /cmd_vel_joy (deadman R1)
      EMERGENCY_STOP              -> publish /cmd_vel = (0, 0)
  </description>
  <maintainer email="muhammadalazharf@gmail.com">Muhammad Al Azhar Faradis</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
