<?xml version="1.0"?>
<package format="3">
  <name>amr_visual_regression</name>
  <version>0.1.0</version>
  <description>
    Visual Regression Path B untuk Mobile Robot Ackermann Indoor Platform.
    Approach: depth-statistics regression klasik (scikit-learn) tanpa CNN.
    
    Pipeline:
      1. data_collector_node : record dataset saat teleop
      2. train (offline)     : train Random Forest Regressor
      3. vr_inference_node   : real-time inference -> /cmd_vel_visual
  </description>
  <maintainer email="muhammadalazharf@gmail.com">Muhammad Al Azhar Faradis</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- scikit-learn dan joblib di-install lewat pip / scripts/install_deps.sh -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
